0.1.4
 - set range for fluorescence data to 2**15
 - fix UnicodeDecodeError when saving UTF-8 headers
0.1.3
 - include all example data in dist package
 - force installation of package data
0.1.2
 - replace common unicode characters in channel names
 - improve compatibility with Python 3
0.1.1
 - functional library
0.1.0
 - Initial commit to GitHub