@@ -1,6 +1,7 @@
 0.1.4
  - set range for fluorescence data to 2**15
  - fix UnicodeDecodeError when saving UTF-8 headers
+ - remove rows containing NaN values before writing
 0.1.3
  - include all example data in dist package
  - force installation of package data
